ipc/ipdl/test/ipdl/error/asyncMessageListed.ipdl
//error: IPC message asyncMessageListed::Msg is async, can be delisted

protocol asyncMessageListed {
parent:
    async Msg();
};
